--- a/admin/index.html
+++ b/admin/index.html
@@ -1187,6 +1187,7 @@
         </main>
     </div>
     <script>
+        import.meta.env.API_URL
         async function fetchMembers() {
             console.log("Fetching members from /api/members");
             const res = await fetch('/api/members');
